yaml/RabbitMQ/rabbitmq-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rabbitmq-ingress
  namespace: shared-services
  annotations:
    ingress.class: "haproxy"
spec:
  rules:
  - host: rabbitmq.home.virtualelephant.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: rabbitmq
            port:
              number: 15672
